Refactor collections usage and simplify code logic
Replaced `Arrays.asList` with `List.of` for cleaner and immutable list creation. Applied modern Java syntax, such as instance pattern matching in `equals`, and suppressed specific warnings to improve readability and maintainability.